Support for backend snapshots with XenServer